<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Pulsante Modifica -->
    <Button
        android:id="@+id/btn_edit"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/baseline_edit_24"
        android:textSize="16sp"/>

    <!-- Pulsante Elimina -->
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_edit"
        android:background="@drawable/baseline_delete_24"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

    <!-- Nome, Quantità e Data di Scadenza -->
    <LinearLayout
        android:id="@+id/text_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@+id/btn_edit"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantit"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_expiry_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_di_scadenza"
            android:textSize="16sp"/>
    </LinearLayout>

    <!-- Pulsante Preferiti (Stella) -->
    <Button
        android:id="@+id/btn_star"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/baseline_star_border_24"
        android:textSize="16sp"/>
</RelativeLayout>
